# aoc2023

./: README.md  __init__.py  graph.py  pyproject.toml
aoc_tools/: __init__.py  graph.py  hashable.py  my_itertools.py  numbers.py  scaffold.py  shortest_path.py  three_d.py
day01/: part1.py  part2.py
day02/: part1.py  part2.py  problem.txt
day03/: part1.py  part2.py
day04/: part1.py  part2.py
day05/: part1.py  part2.py
day06/: part1.py  part2.py
day07/: part1.py  part2.py
day08/: part1.py  part2.py
day09/: part1.py  part2.py
day10/: part1.py  part2.py
day11/: part1.py  part2.py
day12/: part1.py  part2.py  sample_input_0.txt
day13/: part1.py  part2.py  problem.txt
day14/: part1.py  part2.py  problem.txt
day15/: part1.py  part2.py  problem.txt
day16/: part1.py  part2.py  problem.txt
day17/: part1.py  part2.py
day18/: part1.py  part2.py  problem.txt
day19/: part1.py  part2.py  problem.txt
day20/: part1.py  part2.py  problem.txt
day21/: part1.py  part2.py  problem.txt
day22/: part1.py  part2.py  problem.txt  sample_answers.txt  sample_input_3.txt  sample_input_4.txt
day23/: part1.py  part2.py  problem.txt
day24/: part1.py  part2.py  problem.txt
day25/: part1.py  problem.txt
